--- a/css/detail.css
+++ b/css/detail.css
@@ -9,7 +9,7 @@ body{
     font-family: Poppins;
     display: flex;
     flex-direction: column;
-justify-content: space-around;
+    justify-content: space-around;
 
 }
 a{
@@ -37,7 +37,7 @@ img:hover{
     justify-content: space-around;
     align-items: center;
     text-transform: uppercase;
-    background-color: white;
+    background-color: rgb(10, 9, 9);
     border-bottom: 1px solid black;
 }
 .menu{
@@ -66,7 +66,7 @@ img:hover{
 }
 .header a{
     display: block;
-    color: black;
+    color: rgb(255, 252, 252);
     height: 100%;
     padding: 15.5px 15px;
 }
