--- a/css/checkout.css
+++ b/css/checkout.css
@@ -11,7 +11,7 @@
     justify-content: space-around;
     align-items: center;
     text-transform: uppercase;
-    background-color: white;
+    background-color: #000;
     border-bottom: 1px solid black;
 }
 .menu{
@@ -27,7 +27,7 @@
 }
 .header a{
     display: block;
-    color: black;
+    color: rgb(244, 241, 241);
     height: 100%;
     padding: 15.5px 15px;
 }
