--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 50px;
-    background: #171717;
+    background: black;
     color: white;
    
   }
@@ -43,7 +43,7 @@
       background-color: #f3f4f6;
   }
   .footer input[type="submit"]{
-    background: blue;
+    background: rgb(51, 170, 183);
     color: azure;
      
       outline: none;
